2009-07-01  Alberto Garcia  <agarcia@igalia.com>

	* hildon/hildon-banner.c (hildon_banner_map):
	Set banner position after mapping.

2009-06-29  Claudio Saavedra  <csaavedra@igalia.com>

	* configure.ac: postrelease version bump.
	* debian/changelog: post release version bump

2009-06-29  Claudio Saavedra  <csaavedra@igalia.com>

	[Release 2.1.86]

	* NEWS: Updates.
	* configure.ac: Bump version.
	* debian/changelog: Updates.

2009-06-29  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* hildon/hildon-program.c (hildon_program_update_top_most): Ignore
	BadWindow error.

2009-06-26  Alejandro Pinheiro  <apinheiro@igalia.com>

	* tests/check-hildon-banner.c
	* tests/check_text.c
	* tests/test_suites.h
	Protect hildon-banner tests with #ifndef HILDON_DISABLE_DEPRECATED, as
	were testing deprecated functions.
	* examples/hildon-banner-example.c: typo on button3 type, that causes
	a fail compiling with --with-examples but without --disable-deprecated

	Missed commit in order to fix compilation using '--enable-fatal' and
	'--disable-deprecated' (see previous commit)

2009-06-26  Alejandro Pinheiro  <apinheiro@igalia.com>

	* examples/hildon-banner-example.c: Protect deprecated hildon-banner
	functions with #ifndef HILDON_DISABLE_DEPRECATED
	* examples/hildon-find-toolbar.c: Protect deprecated
	HILDON_ICON_SIZE_TOOLBAR with #ifndef HILDON_DISABLE_DEPRECATED
	* hildon/hildon-find-toolbar.c: Change deprecated HILDON_ICON_SIZE_TOOLBAR
	in favor of HILDON_ICON_PIXEL_SIZE_FINGER
	* hildon/hildon-private.h: Unmark hildon_privfate_create_animation() as
	deprecated.
	* hildon/hildon-stackable-window.c: Added #undef HILDON_DISABLE_DEPRECATED
	to allow proper compilation of deprecated functions defined on the header

	Fixed compilation using '--enable-fatal' and '--disable-deprecated'

2009-06-25  Claudio Saavedra  <csaavedra@igalia.com>

	* hildon/hildon-pannable-area.c: (hildon_pannable_area_init):
	Cache the panning indicator color.,